# budget-tracker

./: .env  .gitignore  .pylintrc  CLAUDE.md  README.md  build-and-deploy.sh  build-and-push.sh  deploy_full.sh  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  package-lock.json  run_docker-compose.sh
back-fastapi/: .coveragerc  .dockerignore  .env  .env.sample  .gitignore  .mypy.ini  API_USAGE_EXAMPLES.md  CLAUDE.md  Dockerfile  README.md  build-and-push.sh  celerybeat-schedule.db  clear_test_data.sh  drop_tables.sh  generate_test_data  generate_work_data  gunicorn_start  load.py  mypy.ini  old_requirements.txt  pyproject.toml  requirements.txt  run.sh  run_app.sh  run_mypy  run_tests.sh
back-fastapi/alembic/: env.py
back-fastapi/alembic/versions/: 2023_09_14_203000-2971634b2f1a_updates_of_account_model.py  2023_09_14_210141-60fa773750a3_removed_initial_balance.py  2023_09_14_213909-55b9a986c80d_opening_date_to_datetime.py  2023_09_14_221213-aeb10dad3be8_.py  2023_09_15_112506-eb7b2959e4d7_changes_in_transaction.py  2023_09_15_112718-0d13d7cea3ee_changes_in_default_category.py  2023_09_15_114208-8a7855f1d249_put_back_is_income_to_category.py  2023_09_15_114244-444da7484090_put_back_is_income_to_category.py  2023_09_15_193037-ba93d17362b6_some_relation_changes.py  2023_09_17_195055-a19d7be9a717_added_target_amount.py  2023_09_18_084609-444d952babdf_updated_user_model_to_mapped_column.py  2023_09_18_104354-e146c8b916b1_updated_defaultcategory_and_.py  2023_09_20_111450-1a42c555f3ee_init.py  2023_09_20_114544-d1700c7785ef_init.py  2023_09_20_122658-76ba1a2e993d_init.py  2023_09_29_121307-9cd010ff4f32_transaction_model_datetime.py  2023_12_28_123851-3bb51c3bcb16_added_initial_balance_to_account.py  2023_12_29_091052-5ba702700a2d_init.py  2024_03_28_180547-380ac897b98f_language_model.py  2024_03_29_080357-aeb7c618de1e_usersettings.py  2024_03_29_085059-620cd3aac75e_usersettinngs_add_user_relationship.py  2024_04_09_085917-4ea409047b56_update_transaction_schema_add_linked_.py  2024_04_09_203011-2bd570784ef2_add_default_amount.py  2024_04_09_203122-40e32f928b62_add_default_amount.py  2024_04_09_214627-8983aa792315_new_balance_can_be_nullable.py  2024_04_09_214939-b5f3e8e3359d_is_transfer_by_default_is_false.py  2024_04_11_081744-d1c336f6b86c_removed_old_fields_from_models.py  2024_04_12_180248-aa6f55d2c0c3_updated_migrations.py  2024_04_13_073517-7ddb7f9b3991_update_exchange_rates_history_model.py  2024_04_14_104251-f128aead0048_exchange_rates_table_created.py  2024_04_14_131426-4b0af92d44a5_add_table_exchange_rates.py  2024_06_01_094930-6c054b1d88ad_add_show_in_reports_field.py  2024_06_05_121438-881a2b1a20be_add_activation_token_table.py  2024_06_05_135455-43861b1c72d0_change_is_active_to_bool.py  2024_07_02_212521-42a9b8a059f9_add_budgets_table.py  2024_07_02_223316-51533b59f1dd_add_is_archived_field_to_budgets_table.py  2024_07_04_011135-f153d2c8f8e0_add_currency_to_budget_model.py  2024_07_04_222840-e15e53cd19dc_add_change_string_text_for_categories.py  2024_07_04_224738-a83932a8ea9a_add_fix_of_fix_of_fix.py  2024_11_27_115618-ff674e9d4f55_add_account_credit_limit_field.py  (+7 more)
back-fastapi/app/: celery.py  config.py  database.py  logger_config.py  main.py
back-fastapi/app/data_loaders/: account_type_data_loader.py  currency_data_loader.py  load_all.py
back-fastapi/app/data_loaders/test_data/: __init__.py  clear_test_db.py  generate_accounts.py  generate_test_data.py  generate_transactions.py  generate_users.py
back-fastapi/app/data_loaders/work_data/: account_type_data_loader.py  category_data_loader.py  currency_data_loader.py  languages_loader.py  load_all.py
back-fastapi/app/dependencies/: check_token.py
back-fastapi/app/middleware/: token_update.py
back-fastapi/app/models/: Account.py  AccountType.py  ActivationToken.py  BaseCurrencyChangeHistory.py  Budget.py  CreditAccountDetails.py  Currency.py  DefaultCategory.py  ExchangeRateHistory.py  Language.py  PlannedTransaction.py  Transaction.py  TransactionTemplate.py  User.py  UserCategory.py  UserSettings.py
back-fastapi/app/routes/: accounts.py  analytics.py  auth.py  budgets.py  categories.py  currencies.py  exchange_rates.py  financial_planning.py  management.py  planned_transactions.py  reports.py  settings.py  test_check.py  transations.py  user_settings.py
back-fastapi/app/schemas/: account_schema.py  account_type_schema.py  analytics_schema.py  budgets_schema.py  category_schema.py  currency_schema.py  exchange_rates_schema.py  language_schema.py  oauth_schema.py  planned_transaction_schema.py  reports_schema.py  settings_schema.py  token_schema.py  transaction_schema.py  user_schema.py
back-fastapi/app/scripts/: clean_db_full.py
back-fastapi/app/scripts/one_time/: migrate_old_transfers.py
back-fastapi/app/services/: CurrencyProcessor.py  accounts.py  auth.py  budgets.py  categories.py  currencies.py  errors.py  exchange_rates.py  financial_planning.py  planned_transactions.py  reports.py  settings.py  transactions.py  user_settings.py
back-fastapi/app/services/analytics/: data_processor.py  expense_analyzer.py  openai_client.py  prompts.py
back-fastapi/app/services/diagrams/: builder.py
back-fastapi/app/services/exchange_services/: AbstractCurrencyService.py  CurrencyBeacon.py  exceptions.py
back-fastapi/app/services/reports_generators/: BalanceReportGenerator.py  CashFlowGenerator.py  CashFlowReportGenerator.py  ExpensesReportGenerator.py
back-fastapi/app/tasks/: errors.py  tasks.py
back-fastapi/app/tests/: Makefile  __init__.py  conftest.py  db_test_cfg.py  pytest.ini  src_data.py  test_accounts_api.py  test_analytics_api.py  test_auth.py  test_auth_api.py  test_budgets_api.py  test_categories_api.py  test_currencies_api.py  test_data.py  test_exchange_rates_api.py  test_planned_transactions_api.py  test_reports_api.py  test_sanitize_utils.py  test_transactions_api.py  test_user_settings_api.py
back-fastapi/app/utils/: email.py  gdrive_backup.py  sanitize_transaction_filters.py
back-fastapi/scripts/: analyze_installed_packages.py  deploy.sh  fastapi-app.conf
(+264 files in other folders)
