[project]
name = "back-fastapi"
version = "1.5.17"
requires-python = ">=3.12"

dependencies = [
    "alembic >= 1.15.2",
    "bcrypt >= 4.3.0",
    "celery >= 5.5.1",
    "email-validator >= 2.2.0",
    "fastapi >= 0.116.1",
    "fastapi-mail >= 1.4.1",
    "google-auth >= 2.37.0",
    "gunicorn >= 23.0.0",
    "icecream >= 2.1.4",
    "loguru >= 0.7.2",
    "mako >= 1.3.5",
    # "matplotlib>=3.10.6",  # Removed - replaced with Chart.js frontend rendering
    "pendulum >= 3.0.0",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "pydantic-settings >= 2.3.4",
    "pyjwt >= 2.8.0",
    "python-dotenv >= 1.0.1",
    "python-multipart >= 0.0.9",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
    "uvloop >= 0.19.0",
    "openai >= 1.105.0",
    "starlette>=0.47.3,<0.48.0",
    "cachetools>=5.5.2,<6.0",
]

[project.optional-dependencies]
dev = [
    "appnope >= 0.1.4",
    "astroid >= 3.3.9",
    "asttokens >= 3.0.0",
    "backcall >= 0.2.0",
    "coverage >= 7.5.4",
    "debugpy >= 1.8.2",
    "executing >= 2.2.0",
    "fastapi-cli >= 0.0.10",
    "fonttools >= 4.53.1",
    "iniconfig >= 2.0.0",
    "isort >= 5.13.2",
    "jedi >= 0.19.1",
    "mccabe >= 0.7.0",
    "mypy >= 1.10.1",
    "mypy-extensions >= 1.0.0",
    "parso >= 0.8.4",
    "pip-review >= 1.3.0",
    "pkginfo >= 1.10.0",
    "pluggy >= 1.5.0",
    "pydevd-pycharm >= 252.25557.178",
    "pylint >= 3.2.5",
    "pytest >= 8.2.2",
    "pytest-cov >= 5.0.0",
    "readme-renderer >= 44.0",
    "ruff>=0.12.11",
    "time-machine >= 2.14.2",
    "tomlkit >= 0.12.5",
    "twine >= 5.1.1",
    "types-cachetools >= 5.4.0.20240717",
    "types-requests >= 2.32.0.20240622",
]

[tool.setuptools]
packages = ["app", "alembic"]

[tool.ruff.format]
quote-style = "preserve"

[tool.deptry.package_module_name_map]
python-dotenv = ["dotenv"]
pyjwt = ["jwt"]
google-auth = ["google", "google.auth", "google.oauth2"]

[tool.ruff.lint]
select = ["I", "E", "W"]
fixable = ["E3", "I"]
ignore = ["E501"]