[project]
name = "back-fastapi"
version = "1.5.17"
requires-python = ">=3.12"

dependencies = [
    "alembic >= 1.17.0",
    "bcrypt >= 5.0.0",
    "celery >= 5.5.1",
    "email-validator >= 2.2.0",
    "fastapi >= 0.119.0",
    "fastapi-mail >= 1.4.1",
    "google-auth >= 2.41.1",
    "gunicorn >= 23.0.0",
    "icecream >= 2.1.8",
    "loguru >= 0.7.2",
    "mako >= 1.3.5",
    "pendulum >= 3.0.0",
    "psycopg[binary]>=3.2.10",
    "pydantic>=2.12.0",
    "pydantic-settings >= 2.11.0",
    "pyjwt >= 2.8.0",
    "python-dotenv >= 1.0.1",
    "python-multipart >= 0.0.9",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
    "uvloop >= 0.19.0",
    "openai >= 2.3.0",
    "starlette>=0.48.0",
    "cachetools>=6.2.1",
]

[project.optional-dependencies]
dev = [
    "appnope >= 0.1.4",
    "astroid >= 4.0.1",
    "asttokens >= 3.0.0",
    "backcall >= 0.2.0",
    "coverage >= 7.5.4",
    "debugpy >= 1.8.2",
    "executing >= 2.2.0",
    "fastapi-cli >= 0.0.10",
    "fonttools >= 4.60.1",
    "iniconfig >= 2.0.0",
    "isort >= 7.0.0",
    "jedi >= 0.19.1",
    "mccabe >= 0.7.0",
    "mypy >= 1.18.2",
    "mypy-extensions >= 1.0.0",
    "parso >= 0.8.4",
    "pip-review >= 1.3.0",
    "pkginfo >= 1.10.0",
    "pluggy >= 1.6.0",
    "pydevd-pycharm >= 253.24325.40",
    "pylint >= 4.0.0",
    "pytest >= 8.4.2",
    "pytest-cov >= 7.0.0",
    "readme-renderer >= 44.0",
    "ruff>=0.14.0",
    "time-machine >= 2.19.0",
    "tomlkit >= 0.13.3",
    "twine >= 6.2.0",
    "types-cachetools >= 6.2.0.20250827",
    "types-requests >= 2.32.4.20250913",
]

[tool.setuptools]
packages = ["app", "alembic"]

[tool.ruff.format]
quote-style = "preserve"

[tool.deptry.package_module_name_map]
python-dotenv = ["dotenv"]
pyjwt = ["jwt"]
google-auth = ["google", "google.auth", "google.oauth2"]

[tool.ruff.lint]
select = ["I", "E", "W"]
fixable = ["E3", "I"]
ignore = ["E501"]

[tool.ruff]
line-length = 120